Midnight update Planted Clone

--- a/Planted.html
+++ b/Planted.html
@@ -8,6 +8,8 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous">
    <link rel="stylesheet" type="text/css" href="Planted.css">
    <title>Document</title>
 </head>
@@ -18,9 +20,12 @@
       <div class="nav-wrapper">
 
          <a href="#!" class="brand-logo">
-            <i class="material-icons">menu</i>Menu</a>
+            <i class="material-icons">menu</i>
+            <i class="menu">MENU</i>
+         </a>
          <a href="#!" class="brand-logo center">
-            <i class="header"></i>Planted</a>
+            <img src="C:\Users\danie\Desktop\Planted\planted.png" alt="Planted">
+         </a>
          <ul class="right hide-on-med-and-down">
             <li>
                <a href="candidates.html">
@@ -41,15 +46,15 @@
       </div>
    </nav>
 
-   <div class="row" <!-- Page Content goes here -->
-      <h2 id="text1">Get planted as a Flamingo Wrestler at a retirement home for superheroes</h2>
-      <div id="emailbox">
-         <input type="emailtext" size="30" name="email">
-         <input type="submit" name="submit">
-         <br>
-         <br>
-         <p>Grow your career at a job you’ll love.</p>
-      </div>
+   <div class="jumbotron">
+      <h1 class="Flamingo">Get planted as a Flamingo Wrestler at a retirement home for superheroes</h1>
+      <br>
+      <input type="emailtext" size="30" name="email">
+      <input type="submit" name="submit">
+      <br>
+      <br>
+      <br>
+      <p>Grow your career at a job you'll love</p>
    </div>
 </body>
 
